@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/lang/pt-br.php,v 1.45 2008/02/09 12:35:59 goddess_skuld Exp $ 
+ * $Header: /cvsroot/nocc/nocc/webmail/lang/pt-br.php,v 1.46 2008/03/06 17:04:05 goddess_skuld Exp $ 
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -10,6 +10,7 @@
  *
  * Configuration file for the portuguese Brazilian language
  * Translation by Giovani Zamboni <zambaxtz@terra.com.br>
+ * Translation revised by Renato Frederick <frederick@dahype.org>
  */
 
 $charset = 'UTF-8';
@@ -50,13 +51,13 @@ $alt_new_msg = 'Nova mensagens';
 $alt_reply = 'Responder ao autor';
 $alt_reply_all = 'Responder à todos';
 $alt_forward = 'Encaminhar';
-$alt_next = 'Next'; //to translate
-$alt_prev = 'Previous'; //to translate
-$title_next_page = 'Next page'; //to translate
-$title_prev_page = 'Previous page'; //to translate
+$alt_next = 'Próximo';
+$alt_prev = 'Anterior';
+$title_next_page = 'Próxima. Página';
+$title_prev_page = 'Página Anterior';
 $title_next_msg = 'Próxima mensagem';
 $title_prev_msg = 'Mensagem anterior';
-$html_on = 'on';  //to translate
+$html_on = 'Ligado';
 $html_theme = 'Tema';
 
 // index.php
@@ -69,81 +70,81 @@ $html_help = 'Ajuda';
 $html_server = 'Servidor';
 $html_wrong = 'O usuário ou a senha estão incorretos';
 $html_retry = 'Repetir';
-$html_remember = "Remember settings"; //to translate
+$html_remember = 'Lembrar Configurações';
 
 // prefs.php
-$html_msgperpage = 'Messages per page';  //to translate
-$html_preferences = 'Preferences';  //to translate
-$html_full_name = 'Full name';  //to translate
-$html_email_address = 'E-mail Address';  //to translate
-$html_ccself = 'Cc self';  //to translate
-$html_hide_addresses = 'Hide addresses';  //to translate
-$html_outlook_quoting = 'Outlook-style quoting';  //to translate
-$html_reply_to = 'Reply to';  //to translate
-$html_use_signature = 'Use signature';  //to translate
-$html_signature = 'Signature';  //to translate
+$html_msgperpage = 'Mensagens por página';  
+$html_preferences = 'Preferências';  
+$html_full_name = 'Nome Completo';  
+$html_email_address = 'Endereço de Email';  
+$html_ccself = 'Cc para você mesmo';  
+$html_hide_addresses = 'Ocultar Endereços';  
+$html_outlook_quoting = 'Quotas no estilo Outlook';  
+$html_reply_to = 'Responder para';  
+$html_use_signature = 'Usar Assinatura';  
+$html_signature = 'Assinatura';  
 $html_reply_leadin = 'Reply Leadin';  //to translate
-$html_prefs_updated = 'Preferences updated';  //to translate
-$html_manage_folders_link = 'Manage IMAP Folders';  //to translate
-$html_manage_filters_link = 'Manage Email Filters';  //to translate
-$html_use_graphical_smilies = 'Use graphical smilies'; //to translate
-$html_sent_folder = 'Copy sent mails into a dedicated folder'; //to translate
-$html_trash_folder = 'Move deleted mails into a dedicated folder'; // to translate
-$html_colored_quotes = 'Colored quotes'; //to translate
-$html_display_struct = 'Display structured text'; //to translate
+$html_prefs_updated = 'Preferências Atualizada';  
+$html_manage_folders_link = 'Gerenciar Pastas IMAP';  
+$html_manage_filters_link = 'Gerenciar Filtros de Email';  
+$html_use_graphical_smilies = 'Usar Smiles'; 
+$html_sent_folder = 'Copiar emails enviados para'; 
+$html_colored_quotes = 'Quotas Coloridas'; 
+$html_display_struct = 'Mostrar texto estruturado'; 
+$html_send_html_mail = 'Enviar email em formato HTML';
 $html_send_html_mail = 'Send mail in HTML format'; //to translate
 
 // folders.php
 $html_folders = 'Folders';  //to translate
-$html_folders_create_failed = 'Folder could not be created!';  //to translate
-$html_folders_sub_failed = 'Could not subscribed to folder!';  //to translate
-$html_folders_unsub_failed = 'Could not unsubscribed from folder!';  //to translate
-$html_folders_rename_failed = 'Folder could not be renamed!';  //to translate
-$html_folders_updated = 'Folders updated';  //to translate
-$html_folder_subscribe = 'Subscribe to';  //to translate
-$html_folder_rename = 'Rename';  //to translate
-$html_folder_create = 'Create new folder called';  //to translate
-$html_folder_remove = 'Unsubscribe from';  //to translate
-$html_folder_delete = 'Delete';  //to translate
-$html_folder_to = 'to'; //to translate
+$html_folders_create_failed = 'Pasta não pôde ser criada';  
+$html_folders_sub_failed = 'Não foi possível asssinar a pasta!';  
+$html_folders_unsub_failed = 'Não foi possível cancelar assinatura deste pasta!';  
+$html_folders_rename_failed = 'Pasta não pode ser renomeada!';  
+$html_folders_updated = 'Pastas atualizadas!';  
+$html_folder_subscribe = 'Assinar pasta';  
+$html_folder_rename = 'Renomear';  
+$html_folder_create = 'Criar nova pasta chamda';  
+$html_folder_remove = 'Cancelar assinatura de';  
+$html_folder_delete = 'Deletar';  
+$html_folder_to = 'para'; 
 
 // filters.php
-$html_filter_remove = 'Delete';  //to translate
-$html_filter_body = 'Message Body';  //to translate
-$html_filter_subject = 'Message Subject';  //to translate
-$html_filter_to = 'To Field';  //to translate
-$html_filter_cc = 'Cc Field';  //to translate
-$html_filter_from = 'From Field';  //to translate
-$html_filter_change_tip = 'To change a filter simply overwrite it.';  //to translate
-$html_reapply_filters = 'Reapply all filters';  //to translate
-$html_filter_contains = 'contains';  //to translate
-$html_filter_name = 'Filter Name';  //to translate
-$html_filter_action = 'Filter Action';  //to translate
-$html_filter_moveto = 'Move to';  //to translate
+$html_filter_remove = 'Deletar';  
+$html_filter_body = 'Corpo da Mensagem';  
+$html_filter_subject = 'Assunto da Mensagem';  
+$html_filter_to = 'Campo para';  
+$html_filter_cc = 'Campo Cc';  
+$html_filter_from = 'Campo De';  
+$html_filter_change_tip = 'Para modificar um filtro simplesmente sobrescreva-o.';  
+$html_reapply_filters = 'Reaplicar todos os filtros';  
+$html_filter_contains = 'contém';  
+$html_filter_name = 'Nome do filtro';  
+$html_filter_action = 'Ação do Filtro';  
+$html_filter_moveto = 'Mover para';  
 
 // Other pages
-$html_select_one = '--Select One--';  //to translate
-$html_and = 'And';  //to translate
-$html_new_msg_in = 'New messages in';  //to translate
-$html_or = 'or';  //to translate
-$html_move = 'Move';  //to translate
-$html_copy = 'Copy';  //to translate
-$html_messages_to = 'selected messages to';  //to translate
-$html_gotopage = 'Go to Page';  //to translate
-$html_gotofolder = 'Go to Folder';  //to translate
-$html_other_folders = 'Folder List';  //to translate
-$html_page = 'Page';  //to translate
-$html_of = 'of';  //to translate
+$html_select_one = '--Selecione Uma--';  
+$html_and = 'E';  
+$html_new_msg_in = 'Novas mensagens em';  
+$html_or = 'Ou';  
+$html_move = 'Mover'; 
+$html_copy = 'Copiar';  
+$html_messages_to = 'mensagens selecionadas para';  
+$html_gotopage = 'Ir para página';  
+$html_gotofolder = 'Ir para Pasta';  
+$html_other_folders = 'Lista de Pastas';  
+$html_page = 'Página';  
+$html_of = 'de';  
 $html_view_header = 'Ver cabeçalho';
 $html_remove_header = 'Esconder cabeçalho';
 $html_inbox = 'Caixa de Entrada';
-$html_new_msg = 'Novo e-mail';
+$html_new_msg = 'Nova Mensagem';
 $html_reply = 'Responder';
 $html_reply_short = 'Res';
 $html_reply_all = 'Responder à todos';
 $html_forward = 'Encaminhar';
 $html_forward_short = 'Enc';
-$html_forward_info = 'The forwarded message will be send as an attachment to this one.'; //to translate
+$html_forward_info = 'A mensagem encaminhada será enviada como anexo desta mensagem.';
 $html_delete = 'Excluir';
 $html_new = 'Novo';
 $html_mark = 'Excluir';
@@ -153,21 +154,21 @@ $html_att_unknown = '[Desconhecido]';
 $html_attach = 'Anexar arquivo';
 $html_attach_forget = 'Você precisa anexar seus arquivos antes de enviar esta mensagem !';
 $html_attach_delete = 'Remover anexos selecionados';
-$html_attach_none = 'You must select a file to attach!';  //to translate
-$html_sort_by = 'Sort by';  //to translate
-$html_sort = 'Sort'; //to translate
+$html_attach_none = 'Você precisa selecionar um arquivo para anexar!';  
+$html_sort_by = 'Ordenar por';  
+$html_sort = 'Ordenar'; 
 $html_from = 'De';
 $html_subject = 'Assunto';
 $html_date = 'Data';
 $html_sent = 'Enviar';
-$html_wrote = 'wrote';  //to translate
+$html_wrote = 'escreveu';
 $html_size = 'Tamanho';
 $html_totalsize = 'Tamanho Total';
-$html_kb = 'kB';  //to translate
-$html_bytes = 'bytes';  //to translate
+$html_kb = 'kb';
+$html_bytes = 'bytes';
 $html_filename = 'Nome do Arquivo';
 $html_to = 'Para';
-$html_cc = 'Cc';  //to translate
+$html_cc = 'Cc';
 $html_bcc = 'Cco';
 $html_nosubject = 'Sem assunto';
 $html_send = 'Enviar';
@@ -177,69 +178,69 @@ $html_logout = 'Sair';
 $html_msg = 'Mensagem';
 $html_msgs = 'Mensagens';
 $html_configuration = 'Este servidor ainda não esta bem configurado !';
-$html_priority = 'Priority';  //to translate
-$html_low = 'Low';  //to translate
-$html_normal = 'Normal';  //to translate
-$html_high = 'High';  //to translate
-$html_receipt = 'Request a return receipt';  //to translate
-$html_select = 'Select';  //to translate
-$html_select_all = 'Invert Selection';  //to translate
-$html_loading_image = 'Loading image';  //to translate
-$html_send_confirmed = 'Your mail was accepted for delivery';  //to translate
-$html_no_sendaction = 'No action specified. Try enabling JavaScript.';  //to translate
-$html_error_occurred = 'An error occurred';  //to translate
-$html_prefs_file_error = 'Unable to open preferences file for writing.';  //to translate
-$html_wrap = 'Wrap outgoing messages to :';  //to translate
-$html_wrap_none = 'None'; //to translate
-$html_usenet_separator = 'Usenet separator ("-- \n") Before signature';  //to translate
-$html_mark_as = 'Mark as'; //to translate
-$html_read = 'read'; //to translate
-$html_unread = 'unread'; //to translate
-$html_encoding = 'Character encoding'; // to translate
+$html_priority = 'Prioridade';  
+$html_low = 'Baixa';  
+$html_normal = 'Normal';  
+$html_high = 'Alta';  
+$html_receipt = 'Pedir confirmação de Leitura';  
+$html_select = 'Selecionar';  
+$html_select_all = 'Inverter Seleção';  
+$html_loading_image = 'Carregando imagem';  
+$html_send_confirmed = 'Sua mensagem foi aceita para entrega';  
+$html_no_sendaction = 'Sem ação especificada. Tente habilitar JavaScript.';  
+$html_error_occurred = 'Ocorreu um erro';  
+$html_prefs_file_error = 'Impossível abrir arquivo de preferências para gravação.';  
+$html_wrap = 'Quebrar mensagens de saída em :';  
+$html_wrap_none = 'Nenhuma'; 
+$html_usenet_separator = 'Separador Usenet ("-- \n") Antes da assinatura';  
+$html_mark_as = 'Marcar como'; 
+$html_read = 'lido'; 
+$html_unread = 'não lido'; 
+$html_encoding = 'Codificação de Caracteres'; 
 
 // Contacts manager
-$html_add = 'Add';  //to translate
-$html_contacts = 'Contacts';  //to translate
-$html_modify = 'Modify';  //to translate
-$html_back = 'Back';  //to translate
-$html_contact_add = 'Add new contact';  //to translate
-$html_contact_mod = 'Modify a contact';  //to translate
-$html_contact_first = 'First name';  //to translate
-$html_contact_last = 'Last Name';  //to translate
-$html_contact_nick = 'Nick';  //to translate
-$html_contact_mail = 'Mail';  //to translate
-$html_contact_list = 'Contact list of ';  //to translate
-$html_contact_del = 'from the contact list';  //to translate
+$html_add = 'Adicionar';  
+$html_contacts = 'Contatos';  
+$html_modify = 'Modificar';  
+$html_back = 'Voltar';  
+$html_contact_add = 'Adicionar novo contato';  
+$html_contact_mod = 'Modificar um contato';  
+$html_contact_first = 'Primeiro Nome';  
+$html_contact_last = 'Último Nome';  
+$html_contact_nick = 'Apelido';  
+$html_contact_mail = 'E-Mail';  
+$html_contact_list = 'Listas de contatos de ';  
+$html_contact_del = 'da lista de contatos';  
 
-$html_contact_err1 = 'Maximal number of contact is ';  //to translate
-$html_contact_err2 = 'You can\'t add a new contact';  //to translate
-$html_contact_err3 = 'You don\'t have access rights to contact list'; //to translate
-$html_del_msg = 'Delete selected messages ?';  //to translate
+$html_contact_err1 = 'Máximo número de contatos é ';  
+$html_contact_err2 = 'Você não pode adicionar um novo contato';  
+$html_contact_err3 = 'Você não tem acesso à lista de contatos'; 
+$html_del_msg = 'Deletar mensagens selecionadas ?';  
 $html_down_mail = 'Download';  //to translate
 
 $original_msg = '-- Mensagem Original --';
 $to_empty = 'Campo \'Para\' não pode estar vazio !';
 
 // Images warning
-$html_images_warning = 'For your security, remote pictures are not displayed.'; // to translate
-$html_images_display = 'Display pictures'; // to translate
+$html_images_warning = 'Para sua segurança, imagens remotas não são mostradas.'; 
+$html_images_display = 'Mostrar imagens'; 
 
 // SMTP problems (class_smtp.php)
-$html_smtp_error_no_conn = 'Unable to open SMTP connection';  //to translate
-$html_smtp_error_unexpected = 'Unexpected SMTP response:';  //to translate
+$html_smtp_error_no_conn = 'Impossível abrir conexão SMTP';  
+$html_smtp_error_unexpected = 'Resposta SMTP inesperada:';  
 
 // IMAP messages (class_local.php)
-$lang_could_not_connect = 'Could not connect to server';  //to translate
-$lang_invalid_msg_num = 'Bad Message Number';  //to translate
+$lang_could_not_connect = 'Não foi possível conectar ao servidor';  
+$lang_invalid_msg_num = 'Número inválido de mensagem';  
 
-$html_file_upload_attack = 'Possible file upload attack';  //to translate
-$html_invalid_email_address = 'Invalid e-mail address';  //to translate
-$html_invalid_msg_per_page = 'Invalid number of messages per page';  //to translate
-$html_invalid_wrap_msg = 'Invalid message wrap width';  //to translate
-$html_seperate_msg_win = 'Messages in separate window';  //to translate
+$html_file_upload_attack = 'Possível ataque de upload do arquivo';
+$html_invalid_email_address = 'Endereço de e-mail inválido';  
+$html_invalid_msg_per_page = 'Número de mensagens por página inválida';  
+$html_invalid_wrap_msg = 'Larguda de quebra de mensagem inválida';  
+$html_seperate_msg_win = 'Mensagens em uma janela separada';
 
 // Exceptions
-$html_err_file_contacts = 'Unable to open contacts file for writing.'; //to translate
-$html_session_file_error = 'Unable to open session file for writing.';  //to translate
-$html_login_not_allowed = 'This login is not allowed for connexion.'; //to translate
+$html_err_file_contacts = 'Impossível abrir arquivo de contatos para gravação.'; 
+$html_session_file_error = 'Impossível abrir arquivo de dessão para gravação.';  
+$html_login_not_allowed = 'Este login não é permitido para conexão.'; 
 ?>
